[tool.poetry]
name = "short-movie-generator"
version = "0.1.0"
description = ""
authors = ["ShunyaYamagami <othello200063@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
numpy = "^1.26.4"

[tool.ruff]
line-length = 130
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
